--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <title>03. JavaScript детальней</title>
-    <script src="/03-theory-num-str-date/01-numbers.js" defer></script>
+    <script src="/01-numbers.js" defer></script>
   </head>
   <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
