--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>03. JavaScript детальней</title>
     <!-- <script src="/01-numbers.js" defer></script> -->
-    <script src="/03-functions.js" defer></script>
+    <script src="/04-date.js" defer></script>
   </head>
   <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
